Fixed nav logo alignment

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
 	margin: 0;
 }
 
-.top-banner {
+.navigation {
 	background-color: #1d2e59;
 	padding: 0 8vw;
 	display: -webkit-box;
@@ -13,6 +13,12 @@ body {
 	-webkit-box-align: center;
 	    -ms-flex-align: center;
 	        align-items: center;
+}
+
+.left, .right{
+	width: 20vw;
+	display: flex;
+	justify-content: space-between;
 }
 
 .top-logo {
@@ -231,25 +237,22 @@ body {
 
 @media screen 
 	and (max-width: 1150px) {
-		.top-banner {
+		.navigation {
 			-webkit-box-orient: vertical;
 			-webkit-box-direction: normal;
 			    -ms-flex-direction: column;
 			        flex-direction: column;
 			-ms-flex-pack: distribute;
 			    justify-content: space-around;
+			padding-bottom: 25px;
 		}
-		.top-logo {
+		.center {
 			margin: 25px auto 10px auto;
-			-webkit-box-ordinal-group: 1;
-			    -ms-flex-order: 0;
-			        order: 0;
+			order: -1;
 		}
-		.button {
-			margin: 0 0 15px 0;
-			-webkit-box-ordinal-group: 2;
-			    -ms-flex-order: 1;
-			        order: 1;
+		.left, .right {
+			flex-direction: column;
+			order: 1;
 		}
 }
 
@@ -257,20 +260,22 @@ body {
 	and (min-device-width: 375px) 
 	and (max-device-width: 812px) 
 	and (-webkit-min-device-pixel-ratio: 3)  {
-		.top-banner {
+		.navigation {
 			-webkit-box-orient: vertical;
 			-webkit-box-direction: normal;
 			    -ms-flex-direction: column;
 			        flex-direction: column;
 			-ms-flex-pack: distribute;
 			    justify-content: space-around;
+			padding-bottom: 25px;
 		}
-		.button {
-			margin: 0 0 15px 0;
-			font-size: 36px;
-			-webkit-box-ordinal-group: 2;
-			    -ms-flex-order: 1;
-			        order: 1;
+		.center {
+			margin: 25px auto 10px auto;
+			order: -1;
+		}
+		.left, .right {
+			flex-direction: column;
+			order: 1;
 		}
 		.jumbotron {
 			height: 50vh;
